eks-auto-mode/efs.tf
###########################
##### Amazon EFS
###########################

resource "aws_efs_file_system" "this" {
  creation_token = "efs-${local.project_name}"
  encrypted      = true

  tags = {
    Name = "efs-${local.project_name}"
  }
}

resource "aws_security_group" "efs" {
  name        = "secgrp-${local.project_name}-efs"
  description = "Security group for EFS mount targets"
  vpc_id      = local.network_vpc_id

  tags = {
    Name = "secgrp-${local.project_name}-efs"
  }
}

resource "aws_security_group_rule" "efs_ingress_nfs_from_nodes" {
  type                     = "ingress"
  from_port                = 2049
  to_port                  = 2049
  protocol                 = "tcp"
  security_group_id        = aws_security_group.efs.id
  source_security_group_id = aws_security_group.shared_node_sg.id
  description              = "Allow NFS from EKS nodes"
}

resource "aws_security_group_rule" "efs_egress_all" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.efs.id
  description       = "Allow all outbound traffic"
}

resource "aws_efs_mount_target" "this" {
  for_each = toset(local.network_subnet_ids)

  file_system_id  = aws_efs_file_system.this.id
  subnet_id       = each.value
  security_groups = [aws_security_group.efs.id]
}

resource "aws_efs_access_point" "this" {
  file_system_id = aws_efs_file_system.this.id

  posix_user {
    gid = 1000
    uid = 1000
  }

  root_directory {
    path = "/eks"

    creation_info {
      owner_gid   = 1000
      owner_uid   = 1000
      permissions = "0700" #755
    }
  }

  tags = {
    Name = "efs-ap-${local.project_name}"
  }
}
